--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<artifactId>tickets</artifactId>
 	<packaging>war</packaging>
 	<version>tickets-01.SNAPHOT</version>
-	<name>Library Maven Webapp</name>
+	<name>Tickets Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<maven.test.failure.ignore>true</maven.test.failure.ignore>
 		<spring.framework.version>3.0.6.RELEASE</spring.framework.version>
-		<projectName>library</projectName>
+		<projectName>tickets</projectName>
 	</properties>
 
 	<dependencies>
