--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,13 @@
 					<outputDirectory>${tomcatPath}</outputDirectory>
 				</configuration>
 			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-eclipse-plugin</artifactId>
+                <configuration>
+                    <downloadSources>true</downloadSources>
+                </configuration>
+            </plugin>
 		</plugins>
 
 
