--- a/src/main/resources/config/database/properties/database.properties
+++ b/src/main/resources/config/database/properties/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test_jdbc1
+jdbc.url=jdbc:mysql://localhost:3306/test_jdbc?createDatabaseIfNotExist=true
 jdbc.username=root
 jdbc.password=
